# sales-mirror-bot

./: .env.example  CLAUDE.md  README.md  pyproject.toml
dashboard/: README.md  package.json  schema.sql  tsconfig.json  wrangler.jsonc  wrangler.toml
dashboard/public/: index.html
dashboard/src/: index.ts
prompts/: generate_response.txt  negotiation_strategy.txt  parse_email.txt  system.txt
scenarios/: 01_readycrew_ai_development.md  02_saas_tool_reverse_proposal.md  03_recruitment_to_subcontract.md  04_seminar_to_consulting.md  05_partnership_mutual_referral.md  README.md  sim01_influencer_marketing.md  sim02_ai_training_seminar.md  sim03_influencer_matching_b.md  sim04_corporate_alliance.md  simulation_case1_success.md  simulation_case2_success.md  simulation_case3_failure.md  simulation_case4_failure.md
scenarios/episodes/: episode_05_hikakubiz_success.json  episode_06_cloudsign_reverse.json  episode_07_phone_persistent.json  episode_08_aws_partner.json  episode_09_bot_vs_bot.json  episode_10_english_international.json  episode_11_legal_trap.json  (+3 more)
templates/: advisory.md.j2  contract.md.j2  invoice.md.j2  partnership.md.j2  subcontract.md.j2
tests/: conftest.py  test_db.py  test_documents.py  test_email_parser.py  test_scenarios.py  test_state_machine.py
website/: episode_05.html  episode_06.html  episode_07.html  episode_08.html  episode_09.html  episode_10.html  episode_11.html  episode_12.html  episode_13.html  episode_14.html  episode_case1.html  episode_case2.html  episode_case3.html  episode_case4.html  generate_pages.py  index.html
(+18 files in other folders)
