[project]
name = "sales-mirror-bot"
version = "0.1.0"
description = "Autonomous counter-agent that converts sales emails into revenue"
requires-python = ">=3.11"
dependencies = [
    "aioimaplib>=1.1.0",
    "aiosmtplib>=3.0.0",
    "openai>=1.30.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
sales-mirror-bot = "mirror.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
